// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly empty 1`] = `
<ul
  className="mansory"
>
  <li>
    No words do be listed
  </li>
</ul>
`;

exports[`renders correctly empty 2`] = `
<ul
  className="mansory"
>
  <li>
    No words do be listed
  </li>
</ul>
`;

exports[`renders correctly not empty 1`] = `
<ul
  className="mansory"
>
  used - verb
</ul>
`;
